# ffmpeg.aui2

./: .gitignore  Cargo.toml  README.md  about.hbs  about.toml  aviutl2.toml  download_ffmpeg.rb  fix_hdr.lua  mise.toml
.cargo/: config.toml
.github/workflows/: release.yml
crates/bootstrap/: Cargo.toml
crates/bootstrap/src/: lib.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: audio.rs  audio_prefetch.rs  config.rs  default_config.ini  index.rs  lib.rs  prefetch.rs  video.rs  video_prefetch.rs
src/: index.rs  lib.rs  prefetch.rs  video.rs
