[package]
name = "ffmpeg-aui2"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.102"
aviutl2 = "0.21.0"
dashmap = "6.1.0"
ffmpeg-next = { version = "8.1.0" }
gxhash = "3.5.0"
ordered-float = "5.1.0"
process_path = "0.1.4"
rayon = "1.11.0"
rkyv = "0.8.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
tracing = "0.1.44"
xxhash-rust = { version = "0.8.15", features = ["std", "xxh3"] }
zerocopy = "0.8.42"
